--- a/sobre.html
+++ b/sobre.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
 		<title> Mirror Fashion </title>	
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" type="text/css" href="css/sobre.css">
 		
 	</head>
