--- a/produto.html
+++ b/produto.html
@@ -4,8 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mirror Fashion</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    
+    <!--Inicio do cabeçalho da página-->
+    <header class="container">
+		<!--[if lt IE 9]>
+ 		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+ 		
+		<!--conteudo do cabecalho--> 
+
+		<!-- Logomarca-->
+		<a href="index.html"><h1><img src="img/logo.png" alt="Mirror Fashion"></h1></a>
+		<!-- Fim Logomarca--> 
+		
+		<p class="sacola">Nenhum item na sacola de compras</p>
+
+		<!-- Menu de opções do cabeçalho -->
+		<nav class="menu-opcoes">
+			<ul>
+				<li><a href="sua-conta.html"> Sua conta </a></li>
+				<li><a href="lista-desejos.html"> Lista de Desejos </a></li>
+				<li><a href="fidelidade.html"> Cartão de Fidelidade </a></li>
+				<li><a href="sobre.html"> Sobre </a></li>
+				<li><a href="ajuda.html"> Ajuda </a></li>
+			</ul>
+		</nav>
+        <!-- Fim menu de opções do cabeçalho -->
+        
+        <!--Contéudo principal da página-->
+        <main>
+            <div class="produto">
+                <h1>Fuzzy Cardigan</h1>
+                <p>Por apenas R$ 129,90</p>
+
+                <form>
+                    <fieldset class="cores">
+                        <legend>Escolha a cor:</legend>
+                        <input type="radio" name="cor"  value="verde" id="verde" checked>
+                        <label for="verde">
+                            <img src="img/produtos" alt="">
+                        </label>
+                    </fieldset>
+                </form>
+            </div>
+        </main>
+
+        <!--Inicio do Rodapé da página-->
+        <footer>          
+        <!-- conteudo rodape-->
+            <div class="container">
+                <img src="img/logo-rodape.png" alt="Logo Mirror Fashion">
+
+                    <ul class="social">
+                        <li><a href="http://facebook.com/mirrorfashion">Facebook</a></li>
+                        <li><a href="http://twitter.com/mirrorfashion">Twitter</a></li>
+                        <li><a href="http://plus.google.com/mirrorfashion">Google+</a></li>	
+                    </ul>	
+            </div>                
+        </footer>
+	</header>
 </body>
 </html>
