--- a/produto.html
+++ b/produto.html
@@ -42,10 +42,23 @@
                 <form>
                     <fieldset class="cores">
                         <legend>Escolha a cor:</legend>
+                        
                         <input type="radio" name="cor"  value="verde" id="verde" checked>
                         <label for="verde">
-                            <img src="img/produtos" alt="">
+                            <img src="img/produtos/foto1-verde.png" alt="Produto na cor verde">
                         </label>
+
+                        <input type="radio" name="cor" value="rosa" id="rosa" checked>
+                        <label for="rosa">
+                            <img src="img/produtos/foto1-rosa.png" alt="Produto na cor rosa">
+                        </label>
+
+                        <input type="radio" name="cor" value="azul" id="azul" checked>
+                        <label for="azul">
+                            <img src="img/produtos/foto1-azul.png" alt="" srcset="Produto na cor azul">
+                        </label>
+
+                        <button class="comprar">Comprar</button>
                     </fieldset>
                 </form>
             </div>
