--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 				<ol>
 					<!-- Produto 1 -->
 					<li>
-						<a href="produto.html">
+						<a href="produto-1.html">
 							<figure>
 								<img src="img/produtos/miniatura1.png" alt="miniatura 1">
 								<figcaption>Fuzz Cardigan por R$ 129,90</figcaption>
