--- a/produto-1.html
+++ b/produto-1.html
@@ -34,7 +34,7 @@
         <!-- Fim menu de opções do cabeçalho -->
         
         <!--Contéudo principal da página-->
-        <main>
+        <main id="main">
             <div class="produto">
                 <h1>Fuzzy Cardigan</h1>
                 <p>Por apenas R$ 129,90</p>
