--- a/produto-1.html
+++ b/produto-1.html
@@ -56,7 +56,7 @@
 
                         <input type="radio" name="cor" value="azul" id="azul" checked>
                         <label for="azul">
-                            <img src="img/produtos/foto1-azul.png" alt="" srcset="Produto na cor azul">
+                            <img src="img/produtos/foto1-azul.png" alt="Produto na cor azul">
                         </label>
 
                         <button class="comprar">Comprar</button>
