--- a/sobre.html
+++ b/sobre.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<link rel="stylesheet" type="text/css" href="css/sobre.css">
-		
+		<link rel="stylesheet" href="css/reset.css">
 	</head>
 	<body id="corpo">
 
