--- a/produto-1.html
+++ b/produto-1.html
@@ -37,33 +37,35 @@
         
         <!--Contéudo principal da página-->
         <main id="main">
-            <div class="produto">
-                <h1>Fuzzy Cardigan</h1>
-                <p>Por apenas R$ 129,90</p>
+            <div class="container">   
+                <div class="produto">
+                 <h1>Fuzzy Cardigan</h1>
+                    <p>Por apenas R$ 129,90</p>
 
-                <form>
-                    <fieldset class="cores">
-                        <legend>Escolha a cor:</legend>
+                    <form>
+                        <fieldset class="cores">
+                            <legend>Escolha a cor:</legend>
                         
-                        <input type="radio" name="cor"  value="verde" id="verde" checked>
-                        <label for="verde">
-                            <img src="img/produtos/foto1-verde.png" alt="Produto na cor verde">
-                        </label>
+                            <input type="radio" name="cor"  value="verde" id="verde" checked>
+                            <label for="verde">
+                                <img src="img/produtos/foto1-verde.png" alt="Produto na cor verde">
+                            </label>
 
-                        <input type="radio" name="cor" value="rosa" id="rosa" checked>
-                        <label for="rosa">
-                            <img src="img/produtos/foto1-rosa.png" alt="Produto na cor rosa">
-                        </label>
+                            <input type="radio" name="cor" value="rosa" id="rosa" checked>
+                            <label for="rosa">
+                                <img src="img/produtos/foto1-rosa.png" alt="Produto na cor rosa">
+                            </label>
 
-                        <input type="radio" name="cor" value="azul" id="azul" checked>
-                        <label for="azul">
-                            <img src="img/produtos/foto1-azul.png" alt="Produto na cor azul">
-                        </label>
+                            <input type="radio" name="cor" value="azul" id="azul" checked>
+                            <label for="azul">
+                                <img src="img/produtos/foto1-azul.png" alt="Produto na cor azul">
+                            </label>
 
-                        <button class="comprar">Comprar</button>
-                    </fieldset>
-                </form>
-            </div>
+                            <button class="comprar">Comprar</button>
+                        </fieldset>
+                    </form>
+                </div>
+            </div> 
         </main>
 
         <!--Inicio do Rodapé da página-->
