--- a/produto-1.html
+++ b/produto-1.html
@@ -36,7 +36,7 @@
         <!-- Fim menu de opções do cabeçalho -->
         
         <!--Contéudo principal da página-->
-        <div class="container">   
+        <main class="container">   
             <div class="produto">
                 <h1>Fuzzy Cardigan</h1>
                 <p>Por apenas R$ 129,90</p>
@@ -64,7 +64,7 @@
                     </fieldset>
                  </form>
             </div>
-        </div> 
+        </main> 
         
         <!--Inicio do Rodapé da página-->
         <footer>          
