Adição do Seletor de Tamanho

--- a/produto-1.html
+++ b/produto-1.html
@@ -42,6 +42,7 @@
                 <p>Por apenas R$ 129,90</p>
 
                 <form>
+                    <!--Seletor de cores-->
                     <fieldset class="cores">
                         <legend>Escolha a cor:</legend>
                         
@@ -61,6 +62,13 @@
                             </label>
 
                         <button class="comprar">Comprar</button>
+                    </fieldset>
+                    
+                    <!-- Seletor de tamanho da roupa--> 
+                    <fieldset class="tamanhos">
+                        <legend>Escolha o tamanho:</legend>
+
+                        <input type="range" min="36" max="46" value="42" step="2" name="tamanho">
                     </fieldset>
                  </form>
             </div>
