detalhes do produto

--- a/produto-1.html
+++ b/produto-1.html
@@ -77,9 +77,32 @@
             <div class="detalhes">
                 <h2>Detalhes do Produto</h2>
 
-                <p>Esse é o melhor casaco de Cardigã que você já viu. Excelente material italiano com estampa desenhada pelos artesãos da comunidade de Krotor nas ilhas gregas. Compre já e receba hoje mesmo pela nossa entrega a jato</p>
-            </div>
-
+                <p>Esse é o melhor casaco de Cardigã que você já viu. Excelente material italiano com estampa desenhada pelos artesãos da comunidade de Krotor nas ilhas gregas. Compre já e receba hoje mesmo pela nossa entrega a jato.</p>
+            
+                <!--Tabela com as caracteristicas do produto-->
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Caracteristicas</th>
+                            <th>Detalhe</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Modelo</td>
+                            <td>Cardigan 7845</td>
+                        </tr>
+                    </tbody>
+                    <tr>
+                        <td>Material</td>
+                        <td>Algoldão e poliester</td>
+                    </tr>
+                    <tr>
+                        <td>Cores</td>
+                        <td>Azul, Rosa e Verde</td>
+                    </tr>
+                </table>  
+            </div>          
         </main> 
         
         <!--Inicio do Rodapé da página-->
