--- a/checkout.html
+++ b/checkout.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout Mirror Fashion</title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/open-iconic-bootstrap.css">
 </head>
 
 <body>
@@ -15,6 +16,7 @@
             <p class="lead">Obrigado por comprar na Mirror Fashion! Preencha seus dados para efetivar a compra.</p>
         </div>
     </div>
+    <!--Informações da Compra-->
     <div class="container">
         <div class="card mb-3">
             <div class="card-header">
@@ -37,6 +39,62 @@
                 </dl>
             </div>
         </div>
+
+        <!--Dados Pessoais-->
+        <form>
+            <fieldset>
+                <legend>Dados Pessoais</legend>
+                <div class="form-group">
+                    <label for="nome">Nome Completo</label>
+                    <input type="text" class="form-control" id="nome" name="nome" autofocus>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" class="form-control" id="email" name="email" placeholder="email@exemplo.com">
+                </div>
+
+                <div class="form-group">
+                    <label for="nome">CPF</label>
+                    <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00">
+                </div>
+
+                <div class="form-group custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="newsletter" value="sim" checked>
+                    <label class="custom-control-label" for="newsletter">Quero receber Newsletter da Mirror
+                        Fashion</label>
+                </div>
+            </fieldset>
+
+            <!--Confirmação de Pagamento-->
+            <fieldset>
+                <legend>Cartão de Crédito</legend>
+                <div class="form-group">
+                    <label for="numero-cartao">Número - CVV</label>
+                    <input class="form-control" type="text" name="numero-cartao" id="numero-cartao">
+                </div>
+
+                <div class="form-group">
+                    <label for="bandeira-cartao">Bandeira</label>
+                    <select class="custom-select" id="bandeira-cartao">
+                        <option disabled selected>Selecione a opção...</option>
+                        <option value="master">Master Card</option>
+                        <option value="visa">Visa</option>
+                        <option value="elo">Elo</option>
+                        <option value="amx">American Express</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="validade-cartao">Validade</label>
+                    <input type="month" class="form-control" id="validade-cartao" name="validade-cartao">
+                </div>
+            </fieldset>
+            <button type="submit" class="btn btn-primary">
+                <span class="oi oi-thumb-up"></span>
+                Confirmar Pedido
+            </button>
+        </form>
     </div>
 </body>
 
