--- a/checkout.html
+++ b/checkout.html
@@ -46,7 +46,7 @@
                 <legend>Dados Pessoais</legend>
                 <div class="form-group">
                     <label for="nome">Nome Completo</label>
-                    <input type="text" class="form-control" id="nome" name="nome" autofocus>
+                    <input type="text" class="form-control" id="nome" name="nome" autofocus required>
                 </div>
 
                 <div class="form-group">
@@ -56,7 +56,7 @@
 
                 <div class="form-group">
                     <label for="nome">CPF</label>
-                    <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00">
+                    <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00" required>
                 </div>
 
                 <div class="form-group custom-control custom-checkbox">
