--- a/checkout.html
+++ b/checkout.html
@@ -18,84 +18,92 @@
     </div>
     <!--Informações da Compra-->
     <div class="container">
-        <div class="card mb-3">
-            <div class="card-header">
-                <h2>Sua compra:</h2>
+        <div class="row">
+
+            <div class="col-md-4">
+                <div class="card mb-3">
+                    <div class="card-header">
+                        <h2>Sua compra:</h2>
+                    </div>
+                    <!--Dados do Produto-->
+                    <div class="card-body">
+                        <img src="img/produtos/foto1-verde.png" alt="Fuzzy Cardigan" class="img-thumbnail mb-3">
+                        <dl>
+                            <dt>Produto</dt>
+                            <dd>Fuzzy Cardigan</dd>
+
+                            <dt>Cor</dt>
+                            <dd>Verde</dd>
+
+                            <dt>Tamanho</dt>
+                            <dd>40</dd>
+
+                            <dt>Preço</dt>
+                            <dd>R$ 129,90</dd>
+                        </dl>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-                <img src="img/produtos/foto1-verde.png" alt="Fuzzy Cardigan" class="img-thumbnail mb-3">
-                <dl>
-                    <dt>Produto</dt>
-                    <dd>Fuzzy Cardigan</dd>
+            <!--Dados Pessoais-->
+            <form class="col-md-8">
+                <fieldset>
+                    <legend>Dados Pessoais</legend>
+                    <div class="form-group">
+                        <label for="nome">Nome Completo</label>
+                        <input type="text" class="form-control" id="nome" name="nome" autofocus required>
+                    </div>
 
-                    <dt>Cor</dt>
-                    <dd>Verde</dd>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" name="email"
+                            placeholder="email@exemplo.com">
+                    </div>
 
-                    <dt>Tamanho</dt>
-                    <dd>40</dd>
+                    <div class="form-group">
+                        <label for="nome">CPF</label>
+                        <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00"
+                            required>
+                    </div>
 
-                    <dt>Preço</dt>
-                    <dd>R$ 129,90</dd>
-                </dl>
-            </div>
-        </div>
+                    <div class="form-group custom-control custom-checkbox">
+                        <input type="checkbox" class="custom-control-input" id="newsletter" value="sim" checked>
+                        <label class="custom-control-label" for="newsletter">Quero receber Newsletter da Mirror
+                            Fashion</label>
+                    </div>
+                </fieldset>
 
-        <!--Dados Pessoais-->
-        <form>
-            <fieldset>
-                <legend>Dados Pessoais</legend>
-                <div class="form-group">
-                    <label for="nome">Nome Completo</label>
-                    <input type="text" class="form-control" id="nome" name="nome" autofocus required>
-                </div>
+                <!--Confirmação de Pagamento-->
+                <fieldset>
+                    <legend>Cartão de Crédito</legend>
+                    <div class="form-group">
+                        <label for="numero-cartao">Número - CVV</label>
+                        <input class="form-control" type="text" name="numero-cartao" id="numero-cartao">
+                    </div>
 
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" name="email" placeholder="email@exemplo.com">
-                </div>
+                    <div class="form-group">
+                        <label for="bandeira-cartao">Bandeira</label>
+                        <select class="custom-select" id="bandeira-cartao">
+                            <option disabled selected>Selecione a opção...</option>
+                            <option value="master">Master Card</option>
+                            <option value="visa">Visa</option>
+                            <option value="elo">Elo</option>
+                            <option value="amx">American Express</option>
+                        </select>
+                    </div>
 
-                <div class="form-group">
-                    <label for="nome">CPF</label>
-                    <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00" required>
-                </div>
+                    <div class="form-group">
+                        <label for="validade-cartao">Validade</label>
+                        <input type="month" class="form-control" id="validade-cartao" name="validade-cartao">
+                    </div>
+                </fieldset>
+                <button type="submit" class="btn btn-primary">
+                    <span class="oi oi-thumb-up"></span>
+                    Confirmar Pedido
+                </button>
+            </form>
 
-                <div class="form-group custom-control custom-checkbox">
-                    <input type="checkbox" class="custom-control-input" id="newsletter" value="sim" checked>
-                    <label class="custom-control-label" for="newsletter">Quero receber Newsletter da Mirror
-                        Fashion</label>
-                </div>
-            </fieldset>
-
-            <!--Confirmação de Pagamento-->
-            <fieldset>
-                <legend>Cartão de Crédito</legend>
-                <div class="form-group">
-                    <label for="numero-cartao">Número - CVV</label>
-                    <input class="form-control" type="text" name="numero-cartao" id="numero-cartao">
-                </div>
-
-                <div class="form-group">
-                    <label for="bandeira-cartao">Bandeira</label>
-                    <select class="custom-select" id="bandeira-cartao">
-                        <option disabled selected>Selecione a opção...</option>
-                        <option value="master">Master Card</option>
-                        <option value="visa">Visa</option>
-                        <option value="elo">Elo</option>
-                        <option value="amx">American Express</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label for="validade-cartao">Validade</label>
-                    <input type="month" class="form-control" id="validade-cartao" name="validade-cartao">
-                </div>
-            </fieldset>
-            <button type="submit" class="btn btn-primary">
-                <span class="oi oi-thumb-up"></span>
-                Confirmar Pedido
-            </button>
-        </form>
-    </div>
+        </div><!--Fim .row-->
+    </div><!--Fim .container-->
 </body>
 
 </html>
