--- a/checkout.html
+++ b/checkout.html
@@ -20,7 +20,7 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-xl-3">
                 <div class="card mb-3">
                     <div class="card-header">
                         <h2>Sua compra:</h2>
@@ -45,65 +45,69 @@
                 </div>
             </div>
             <!--Dados Pessoais-->
-            <form class="col-md-8">
-                <fieldset>
-                    <legend>Dados Pessoais</legend>
-                    <div class="form-group">
-                        <label for="nome">Nome Completo</label>
-                        <input type="text" class="form-control" id="nome" name="nome" autofocus required>
-                    </div>
+            <form class="col-md-8 col-xl-9">
+                <div class="row">
+                    <fieldset class="col-lg-6">
+                        <legend>Dados Pessoais</legend>
+                        <div class="form-group">
+                            <label for="nome">Nome Completo</label>
+                            <input type="text" class="form-control" id="nome" name="nome" autofocus required>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" name="email"
-                            placeholder="email@exemplo.com">
-                    </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email" name="email"
+                                placeholder="email@exemplo.com">
+                        </div>
 
-                    <div class="form-group">
-                        <label for="nome">CPF</label>
-                        <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00"
-                            required>
-                    </div>
+                        <div class="form-group">
+                            <label for="nome">CPF</label>
+                            <input type="text" class="form-control" id="cpf" name="cpf" placeholder="000.000.000-00"
+                                required>
+                        </div>
 
-                    <div class="form-group custom-control custom-checkbox">
-                        <input type="checkbox" class="custom-control-input" id="newsletter" value="sim" checked>
-                        <label class="custom-control-label" for="newsletter">Quero receber Newsletter da Mirror
-                            Fashion</label>
-                    </div>
-                </fieldset>
+                        <div class="form-group custom-control custom-checkbox">
+                            <input type="checkbox" class="custom-control-input" id="newsletter" value="sim" checked>
+                            <label class="custom-control-label" for="newsletter">Quero receber Newsletter da Mirror
+                                Fashion</label>
+                        </div>
+                    </fieldset>
 
-                <!--Confirmação de Pagamento-->
-                <fieldset>
-                    <legend>Cartão de Crédito</legend>
-                    <div class="form-group">
-                        <label for="numero-cartao">Número - CVV</label>
-                        <input class="form-control" type="text" name="numero-cartao" id="numero-cartao">
-                    </div>
+                    <!--Confirmação de Pagamento-->
+                    <fieldset class="col-lg-6">
+                        <legend>Cartão de Crédito</legend>
+                        <div class="form-group">
+                            <label for="numero-cartao">Número - CVV</label>
+                            <input class="form-control" type="text" name="numero-cartao" id="numero-cartao">
+                        </div>
 
-                    <div class="form-group">
-                        <label for="bandeira-cartao">Bandeira</label>
-                        <select class="custom-select" id="bandeira-cartao">
-                            <option disabled selected>Selecione a opção...</option>
-                            <option value="master">Master Card</option>
-                            <option value="visa">Visa</option>
-                            <option value="elo">Elo</option>
-                            <option value="amx">American Express</option>
-                        </select>
-                    </div>
+                        <div class="form-group">
+                            <label for="bandeira-cartao">Bandeira</label>
+                            <select class="custom-select" id="bandeira-cartao">
+                                <option disabled selected>Selecione a opção...</option>
+                                <option value="master">Master Card</option>
+                                <option value="visa">Visa</option>
+                                <option value="elo">Elo</option>
+                                <option value="amx">American Express</option>
+                            </select>
+                        </div>
 
-                    <div class="form-group">
-                        <label for="validade-cartao">Validade</label>
-                        <input type="month" class="form-control" id="validade-cartao" name="validade-cartao">
-                    </div>
-                </fieldset>
+                        <div class="form-group">
+                            <label for="validade-cartao">Validade</label>
+                            <input type="month" class="form-control" id="validade-cartao" name="validade-cartao">
+                        </div>
+                    </fieldset>
+                </div>
                 <button type="submit" class="btn btn-primary">
                     <span class="oi oi-thumb-up"></span>
                     Confirmar Pedido
                 </button>
             </form>
 
-        </div><!--Fim .row-->
-    </div><!--Fim .container-->
+        </div>
+        <!--Fim .row-->
+    </div>
+    <!--Fim .container-->
 </body>
 
 </html>
