--- a/checkout.html
+++ b/checkout.html
@@ -10,6 +10,34 @@
 </head>
 
 <body>
+    <!--NAVBAR-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-ligth">
+        <button class="navabar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a href="index.html" class="navabar-brand">Mirror Fashion</a>
+
+        <div class="collapse navbar-collapse" id="">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a href="sobre.html" class="nav-link">Sobre</a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Ajuda</a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Perguntas Frequentes</a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Entre em Contato</a>
+                </li>
+            </ul>
+        </div>
+
+    </nav>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">Ótima escolha!</h1>
@@ -108,6 +136,8 @@
         <!--Fim .row-->
     </div>
     <!--Fim .container-->
+<script type="text/javascrip" src="js/jquery.js"></script>
+<script type="text/javascrip" src="js/bootstrap.js"></script>
 </body>
 
 </html>
