--- a/produto-1.html
+++ b/produto-1.html
@@ -74,6 +74,9 @@
                         <legend>Escolha o tamanho:</legend>
 
                         <input type="range" min="36" max="46" value="42" step="2" name="tamanho">
+
+                        <output for="tamanho" name="valoramento">42</output>
+
                     </fieldset>
                 </form>
             </div>
@@ -124,6 +127,7 @@
             </ul>
         </div>
     </footer>
+ <script type="text/javascript" src="js/produto-1.js"></script>   
 </body>
 
 </html>
