--- a/checkout.html
+++ b/checkout.html
@@ -67,10 +67,25 @@
                             <dd>40</dd>
 
                             <dt>Preço</dt>
-                            <dd>R$ 129,90</dd>
+                            <dd id="preco">R$ 129,90</dd>
                         </dl>
                     </div>
                 </div>
+                <!--Total da Compra-->
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label for="qtd">Quantidade</label>
+                            <input id="qtd" class="form-control" type="number" min="1" max="99" value="1" >
+                        </div>
+
+                        <div class="form-group">
+                            <label for="total">Total</label>
+                            <output for="qtd preco" id="total" class="form-control" >129,90</output>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <!--Dados Pessoais-->
             <form class="col-md-8 col-xl-9">
@@ -136,8 +151,9 @@
         <!--Fim .row-->
     </div>
     <!--Fim .container-->
-<script type="text/javascrip" src="js/jquery.js"></script>
-<script type="text/javascrip" src="js/bootstrap.js"></script>
+<script type="text/javascript" src="js/total.js"></script>    
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
 
 </html>
