--- a/index.html
+++ b/index.html
@@ -278,6 +278,6 @@
             </ul>
         </div>
     </footer>
+<script type="text/javascript" src="js/banner.js"></script>    
 </body>
-
 </html>
